--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: UX Developer
-name: jstify (Narendra Kurapati)
+name: Narendra Kurapati
 email: kurapati.narendra@gmail.com
 location: Hyderabad, India
 company: ''
@@ -72,7 +72,7 @@ navs:
     label: Bookmark
 
   -
-    href: https://in.linkedin.com/in/narendrakurapati
+    href: https://about.me/narendrakurapati
     label: About
 
 # Sidebar to show popular repo
