--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: UX Developer
-name: jstify (Narendra Kurapati)
+name: Narendra Kurapati
 email: kurapati.narendra@gmail.com
 location: Hyderabad, India
 company: ''
@@ -72,8 +72,8 @@ navs:
     label: Bookmark
 
   -
-    href: https://in.linkedin.com/in/narendrakurapati
-    label: About
+    href: https://about.me/narendrakurapati
+    label: About Me
 
 # Sidebar to show popular repo
 side_bar_repo_limit: 5 # Number of repos to show
