--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ company: ''
 company_url: ''
 github_url: https://github.com/jstify
 description: My understandings about the topics
-favicon: favicon.png # Image must be in assets/images
+favicon: profile.png # Image must be in assets/images
 
 # The base hostname & protocol for your site
 # For local test, please use http://localhost:4000
