--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,7 @@ navs:
   -
     href: https://about.me/narendrakurapati
     label: About Me
+	target: _blank
 
 # Sidebar to show popular repo
 side_bar_repo_limit: 5 # Number of repos to show
