--- a/_config.yml
+++ b/_config.yml
@@ -56,8 +56,8 @@ paginate_path: 'page:num'
 # Navigation. If you do not like these modules, just remove them :D
 navs:
   -
-    href: /
-    label: Home
+    href: /demos
+    label: Demos
 
   -
     href: /open-source
