--- a/_config.yml
+++ b/_config.yml
@@ -88,3 +88,4 @@ analytics :
 # For about.html. Fell free to create your own!
 skill_web_keywords: [HTML, CSS, JS, JQuery, Ajax, AngularJS, ReactJS, PrototypeJS, NodeJS, ExpressJS, MongoDB, Boostrap]
 skill_mobile_hybrid_app_keywords: [Cordova, Phonegap, Ionic]
+theme: jekyll-theme-cayman
